--- a/account-settings.html
+++ b/account-settings.html
@@ -34,7 +34,7 @@
     ></div>
     <div id="education-overlay-root"></div>
     <!-- Mobile -->
-    <div data-application="true" class="d-md-none">
+    <div data-application="true" class="hidden-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
