--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -18,7 +18,7 @@
             <div class="_evqnuxp"></div>
             <main class="_fmgjts">
               <div class="_1b9ixxkj" aria-hidden="false">
-                <div class="_oy5ese d-md-none">
+                <div class="_oy5ese hidden-md">
                   <div class="_1l7bhkmt">
                     <div class="_fwc96">
                       <div class="_1ynbv25">
