--- a/gift.html
+++ b/gift.html
@@ -189,7 +189,7 @@
                               <h1 class="tuzvi1j dir dir-ltr">
                                 Let’s redeem your gift card
                               </h1>
-                              <div class="csdieud dir dir-ltr d-md-none">
+                              <div class="csdieud dir dir-ltr hidden-md">
                                 <div class="ckt2gam dir dir-ltr">
                                   <div
                                     class="img-middle"
