--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
                 "
               >
                 <nav
-                  class="_qnqe0zo d-md-none"
+                  class="_qnqe0zo hidden-md"
                   aria-hidden="true"
                   data-shared-element-id="tab-bar"
                 >
@@ -201,7 +201,7 @@
                     >
                   </div>
                 </nav>
-                <div tabindex="-1" class="page-shell-mobile d-md-none">
+                <div tabindex="-1" class="page-shell-mobile hidden-md">
                   <div class="_1a5fl1v">
                     <div class="box-border">
                       <div
