--- a/signup_login.html
+++ b/signup_login.html
@@ -34,7 +34,7 @@
       aria-live="assertive"
     ></div>
     <div id="education-overlay-root"></div>
-    <div data-application="true" class="d-md-none">
+    <div data-application="true" class="hidden-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
