--- a/account-notifications.html
+++ b/account-notifications.html
@@ -902,7 +902,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none d-md-block">
+    <div data-application="true" class="d-none block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
