--- a/reviews.html
+++ b/reviews.html
@@ -401,7 +401,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none d-md-block">
+                                  <div class="_h69t7tv d-none block-md">
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
@@ -480,7 +480,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none d-md-block">
+                                  <div class="_h69t7tv d-none block-md">
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
@@ -559,7 +559,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none d-md-block">
+                                  <div class="_h69t7tv d-none block-md">
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
@@ -638,7 +638,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none d-md-block">
+                                  <div class="_h69t7tv d-none block-md">
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
@@ -717,7 +717,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none d-md-block">
+                                  <div class="_h69t7tv d-none block-md">
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
