--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -568,7 +568,7 @@
     </div>
     <!-- /Mobile -->
     <!-- Desktop -->
-    <div data-application="true" class="d-none d-md-block">
+    <div data-application="true" class="d-none block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
