--- a/wishlists.html
+++ b/wishlists.html
@@ -576,7 +576,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none d-md-block">
+    <div data-application="true" class="d-none block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
