--- a/products.html
+++ b/products.html
@@ -13812,7 +13812,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="_sk02b4 d-lg-none"
+                                                    class="_sk02b4 hidden-lg"
                                                   >
                                                     <div class="_16bq4jy">
                                                       <div
