--- a/products.html
+++ b/products.html
@@ -2809,7 +2809,7 @@
                                                       aria-label="Show map"
                                                       aria-describedby="location-disclaimer-tooltip"
                                                       type="button"
-                                                      class="_11eqlma4 d-none d-lg-block"
+                                                      class="_11eqlma4 d-none block-lg"
                                                     >
                                                       <div class="_10u42wu">
                                                         <span
@@ -7696,7 +7696,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1a5fl1v d-none d-lg-block">
+                <div class="_1a5fl1v d-none block-lg">
                   <div class="box-border">
                     <div
                       style="
