--- a/products.html
+++ b/products.html
@@ -10458,7 +10458,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="_sk02b4 d-none d-lg-flex"
+                                                    class="_sk02b4 d-none flex-lg"
                                                   >
                                                     <div class="_16bq4jy">
                                                       <div
