--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -284,7 +284,7 @@
                                         </div>
                                         <div
                                           id="searchable-address-description"
-                                          class="_1u9fru1"
+                                          class="hidden"
                                         >
                                           Navigate forward to access suggested
                                           results
