--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -377,7 +377,7 @@
                         <span style="font-size: 0"></span>
                         <div class="_w85z74">
                           <div class="_rbccor" id="FMP-target">
-                            <div class="_1u9fru1">
+                            <div class="hidden">
                               <input
                                 type="file"
                                 accept="image/jpeg, image/png, image/heic"
