--- a/covidsafety.html
+++ b/covidsafety.html
@@ -1439,7 +1439,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-0" class="_1u9fru1">
+                                      <div id="faq-answer-0" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -1544,7 +1544,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-1" class="_1u9fru1">
+                                      <div id="faq-answer-1" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -1653,7 +1653,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-2" class="_1u9fru1">
+                                      <div id="faq-answer-2" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
@@ -1761,7 +1761,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div id="faq-answer-3" class="_1u9fru1">
+                                      <div id="faq-answer-3" class="hidden">
                                         <div>
                                           <div class="js-modal-close">
                                             <button
