--- a/explore-where.html
+++ b/explore-where.html
@@ -219,7 +219,7 @@
                                                                     value=""
                                                                   />
                                                                   <div
-                                                                    class="_1u9fru1"
+                                                                    class="hidden"
                                                                     data-placeholder="true"
                                                                     aria-hidden="true"
                                                                   >
