--- a/gift.html
+++ b/gift.html
@@ -355,7 +355,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="_1okflnkr d-none">
+                        <div class="_1okflnkr hidden">
                           <div class="wtqbghl dir dir-ltr">
                             <div class="ckt2gam dir dir-ltr">
                               <div
@@ -397,7 +397,7 @@
                         </div>
                       </div>
                     </div>
-                    <hr class="_1xuw7us d-none" />
+                    <hr class="_1xuw7us hidden" />
                     <div data-testid="payments-application"></div>
                     <div class="cb2cpz8 dir dir-ltr">
                       <div class="_1bpiufr">
