--- a/login-security.html
+++ b/login-security.html
@@ -49,7 +49,7 @@
                     <div class="_siy8gh"></div>
                     <main id="site-content">
                       <nav
-                        class="_qnqe0zo d-none"
+                        class="_qnqe0zo hidden"
                         aria-hidden="true"
                         data-shared-element-id="tab-bar"
                       >
@@ -1099,7 +1099,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
