--- a/notifications.html
+++ b/notifications.html
@@ -328,7 +328,7 @@
                                         </button>
                                       </div>
                                       <div
-                                        class="_1ynftww9 d-none"
+                                        class="_1ynftww9 hidden"
                                         id="filter-menu-dropdown"
                                         tabindex="-1"
                                       >
@@ -570,7 +570,7 @@
                                     </div>
                                   </div>
                                   <div
-                                    class="_wlj5ur d-none"
+                                    class="_wlj5ur hidden"
                                     role="tabpanel"
                                     id="panel-messages"
                                   >
