--- a/products.html
+++ b/products.html
@@ -2809,7 +2809,7 @@
                                                       aria-label="Show map"
                                                       aria-describedby="location-disclaimer-tooltip"
                                                       type="button"
-                                                      class="_11eqlma4 d-none block-lg"
+                                                      class="_11eqlma4 hidden block-lg"
                                                     >
                                                       <div class="_10u42wu">
                                                         <span
@@ -7696,7 +7696,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1a5fl1v d-none block-lg">
+                <div class="_1a5fl1v hidden block-lg">
                   <div class="box-border">
                     <div
                       style="
@@ -7893,7 +7893,7 @@
                                                           value=""
                                                         /></div></label
                                                     ><span
-                                                      class="_1u9fru1"
+                                                      class="hidden"
                                                       id="bigsearch-query-stays_location_inspirations-description"
                                                       >Navigate forward to
                                                       access suggested
@@ -10458,7 +10458,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="_sk02b4 d-none flex-lg"
+                                                    class="_sk02b4 hidden flex-lg"
                                                   >
                                                     <div class="_16bq4jy">
                                                       <div
