--- a/signup_login.html
+++ b/signup_login.html
@@ -1277,7 +1277,7 @@
                                     method="POST"
                                     novalidate=""
                                     data-testid="auth-form"
-                                    class="email-form d-none"
+                                    class="email-form hidden"
                                   >
                                     <input
                                       type="hidden"
@@ -1623,7 +1623,7 @@
                                           data-testid="social-auth-button-phone"
                                           aria-label="Continue with Phone"
                                           type="button"
-                                          class="btn-light continue-btn-phone d-none"
+                                          class="btn-light continue-btn-phone hidden"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -1657,7 +1657,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div data-confirm-number class="_1y9y8er d-none">
+                            <div data-confirm-number class="_1y9y8er hidden">
                               <header
                                 id="panel-header"
                                 data-testid="panel-header"
@@ -1944,7 +1944,7 @@
                                     </div>
                                   </div>
                                   <div
-                                    class="_1yhfti2 d-none"
+                                    class="_1yhfti2 hidden"
                                     id="phone-verification-code-error"
                                     data-testid="phone-verification-code-error"
                                   >
@@ -1981,7 +1981,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div data-finish-signup class="_1y9y8er d-none">
+                            <div data-finish-signup class="_1y9y8er hidden">
                               <header
                                 id="panel-header"
                                 data-testid="panel-header"
@@ -2761,7 +2761,7 @@
                                           aria-live="polite"
                                           aria-atomic="true"
                                         >
-                                          <div class="_1u9fru1">
+                                          <div class="hidden">
                                             <div class="_13oxp5dz">
                                               <div class="flex-items-center">
                                                 <div class="_14tkmhr">
@@ -2791,7 +2791,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1u9fru1">
+                                          <div class="hidden">
                                             <div class="_13oxp5dz">
                                               <div class="flex-items-center">
                                                 <div class="_14tkmhr">
@@ -3058,7 +3058,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
@@ -4322,7 +4322,7 @@
                                   method="POST"
                                   novalidate=""
                                   data-testid="auth-form"
-                                  class="email-form d-none"
+                                  class="email-form hidden"
                                 >
                                   <input
                                     type="hidden"
@@ -4664,7 +4664,7 @@
                                         data-testid="social-auth-button-phone"
                                         aria-label="Continue with Phone"
                                         type="button"
-                                        class="btn-light continue-btn-phone d-none"
+                                        class="btn-light continue-btn-phone hidden"
                                       >
                                         <div class="_1a2vq1h">
                                           <div class="flex-grow-0">
@@ -4698,7 +4698,7 @@
                               </div>
                             </div>
                           </div>
-                          <div data-confirm-number class="_1y9y8er d-none">
+                          <div data-confirm-number class="_1y9y8er hidden">
                             <header
                               id="panel-header"
                               data-testid="panel-header"
@@ -4982,7 +4982,7 @@
                                   </div>
                                 </div>
                                 <div
-                                  class="_1yhfti2 d-none"
+                                  class="_1yhfti2 hidden"
                                   id="phone-verification-code-error"
                                   data-testid="phone-verification-code-error"
                                 >
@@ -5019,7 +5019,7 @@
                               </div>
                             </div>
                           </div>
-                          <div data-finish-signup class="_1y9y8er d-none">
+                          <div data-finish-signup class="_1y9y8er hidden">
                             <header
                               id="panel-header"
                               data-testid="panel-header"
@@ -5790,7 +5790,7 @@
                                         aria-live="polite"
                                         aria-atomic="true"
                                       >
-                                        <div class="_1u9fru1">
+                                        <div class="hidden">
                                           <div class="_13oxp5dz">
                                             <div class="flex-items-center">
                                               <div class="_14tkmhr">
@@ -5818,7 +5818,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_1u9fru1">
+                                        <div class="hidden">
                                           <div class="_13oxp5dz">
                                             <div class="flex-items-center">
                                               <div class="_14tkmhr">
@@ -6610,7 +6610,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" data-user-session class="d-none">
+    <div data-application="true" data-user-session class="hidden">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
