--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1062,7 +1062,7 @@
                             </div>
                             <section>
                               <div class="_v08k6k">
-                                <div class="_1u9fru1">
+                                <div class="hidden">
                                   <input
                                     type="file"
                                     accept="image/jpeg, image/png, image/heic"
