--- a/submission/video.html
+++ b/submission/video.html
@@ -1159,7 +1159,7 @@
                                   </div>
                                 </div>
                                 <input
-                                  class="_1u9fru1"
+                                  class="hidden"
                                   type="file"
                                   accept="video/mp4"
                                   data-testid="video-demo-uploader"
