--- a/transaction_history.html
+++ b/transaction_history.html
@@ -352,7 +352,7 @@
                                                 aria-label="Main navigation menu"
                                                 data-testid="cypress-headernav-profile"
                                               >
-                                                <div class="_1u9fru1">
+                                                <div class="hidden">
                                                   <svg
                                                     viewBox="0 0 32 32"
                                                     xmlns="http://www.w3.org/2000/svg"
