--- a/account-notifications.html
+++ b/account-notifications.html
@@ -49,7 +49,7 @@
                     <div class="_siy8gh"></div>
                     <main id="site-content">
                       <nav
-                        class="_qnqe0zo d-none"
+                        class="_qnqe0zo hidden"
                         aria-hidden="true"
                         data-shared-element-id="tab-bar"
                       >
@@ -902,7 +902,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
@@ -2319,7 +2319,7 @@
     </div>
 
     <!-- Edit Modal -->
-    <div dir="ltr" class='d-none' id="edit-modal">
+    <div dir="ltr" class='hidden' id="edit-modal">
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
@@ -2534,7 +2534,7 @@
     <!-- /Edit Modal -->
 
     <!-- Unsubscribe Modal -->
-    <div dir="ltr" class="d-none" id="unsubscribe-modal">
+    <div dir="ltr" class="hidden" id="unsubscribe-modal">
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
