--- a/contact-host.html
+++ b/contact-host.html
@@ -45,7 +45,7 @@
                 "
               >
                 <nav
-                  class="_qnqe0zo d-none"
+                  class="_qnqe0zo hidden"
                   aria-hidden="true"
                   data-shared-element-id="tab-bar"
                 >
@@ -653,7 +653,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
@@ -762,7 +762,7 @@
                                           </button>
                                         </div>
                                       </div>
-                                      <div class="_1up2wiaw d-none">
+                                      <div class="_1up2wiaw hidden">
                                         <div
                                           class="_1lveqk8"
                                           data-nosnippet="true"
@@ -861,7 +861,7 @@
                                                           value=""
                                                         /></div></label
                                                     ><span
-                                                      class="_1u9fru1"
+                                                      class="hidden"
                                                       id="bigsearch-query-stays_location_inspirations-description"
                                                       >Navigate forward to
                                                       access suggested
