--- a/invite-friends.html
+++ b/invite-friends.html
@@ -224,7 +224,7 @@
                             </svg>
                           </div>
                         </div>
-                        <div class="_1u9fru1">
+                        <div class="hidden">
                           <div>
                             The referrals program is no longer open and no new
                             invites can be sent.<br /><br />If you were sent a
@@ -266,7 +266,7 @@
                             </svg>
                           </div>
                         </div>
-                        <div class="_1u9fru1">
+                        <div class="hidden">
                           For referrals made after Oct 1, 2020, Airbnb doesn't
                           offer travel credit for referrals.
                         </div>
@@ -791,7 +791,7 @@
     </div>
 
     <!-- Show more details modal -->
-    <div dir="ltr" id="show-details-modal" class="d-none">
+    <div dir="ltr" id="show-details-modal" class="hidden">
       <div class="_n0520t">
         <div class="_1sjmvoc">
           <div class="_13nncl3">
@@ -876,7 +876,7 @@
                       <div
                         style="margin-top: 16px; margin-bottom: 24px"
                         id="available-panel"
-                        class="d-none"
+                        class="hidden"
                       >
                         <section>
                           <h2
