--- a/merchandising.html
+++ b/merchandising.html
@@ -4169,7 +4169,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
@@ -4355,7 +4355,7 @@
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="_1up2wiaw d-none">
+                                              <div class="_1up2wiaw hidden">
                                                 <div data-nosnippet="true">
                                                   <div
                                                     class="i1w9pu8s dir dir-ltr"
@@ -4485,7 +4485,7 @@
                                                                       value=""
                                                                     /></div></label
                                                                 ><span
-                                                                  class="_1u9fru1"
+                                                                  class="hidden"
                                                                   id="bigsearch-query-location-description"
                                                                   >Navigate
                                                                   forward to
@@ -5562,7 +5562,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -6146,7 +6146,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -6346,7 +6346,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="d-none d-xl-block">
+                                                <div class="hidden d-xl-block">
                                                   <div
                                                     class="flex-column"
                                                     style="padding-bottom: 48px"
@@ -6716,7 +6716,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <a
                                                       href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -7228,7 +7228,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <a
                                                       href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -7739,7 +7739,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <a
                                                       href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -8250,7 +8250,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <a
                                                       href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                       class="_11eqlma4"
@@ -8498,7 +8498,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="d-none d-xl-block">
+                                                <div class="hidden d-xl-block">
                                                   <div
                                                     class="flex-column"
                                                     style="padding-bottom: 48px"
@@ -8887,7 +8887,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="d-none d-xl-block">
+                                                    <div class="hidden d-xl-block">
                                                       <a
                                                         href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -9412,7 +9412,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="d-none d-xl-block">
+                                                    <div class="hidden d-xl-block">
                                                       <a
                                                         href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -9936,7 +9936,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="d-none d-xl-block">
+                                                    <div class="hidden d-xl-block">
                                                       <a
                                                         href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -10460,7 +10460,7 @@
                                                         >
                                                       </div>
                                                     </div>
-                                                    <div class="d-none d-xl-block">
+                                                    <div class="hidden d-xl-block">
                                                       <a
                                                         href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                         class="_11eqlma4"
@@ -10727,7 +10727,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="d-none d-xl-block">
+                                              <div class="hidden d-xl-block">
                                                 <div
                                                   class="flex-column"
                                                   style="padding-bottom: 48px"
@@ -11055,7 +11055,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -11448,7 +11448,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -11976,7 +11976,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
@@ -12486,7 +12486,7 @@
                                                       </div>
                                                     </div>
                                                   </div>
-                                                  <div class="d-none d-xl-block">
+                                                  <div class="hidden d-xl-block">
                                                     <div
                                                       class="_1rhnbeqq"
                                                       style="
