--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -507,7 +507,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
