--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -50,7 +50,7 @@
                     <div class="_siy8gh"></div>
                     <main id="site-content">
                       <nav
-                        class="_qnqe0zo d-none"
+                        class="_qnqe0zo hidden"
                         aria-hidden="true"
                         data-shared-element-id="tab-bar"
                       >
@@ -743,7 +743,7 @@
     </div>
     <!-- /Mobile -->
     <!-- Desktop -->
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
