--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -425,7 +425,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
