--- a/personal-info.html
+++ b/personal-info.html
@@ -49,7 +49,7 @@
                     <div class="_siy8gh"></div>
                     <main id="site-content">
                       <nav
-                        class="_qnqe0zo d-none"
+                        class="_qnqe0zo hidden"
                         aria-hidden="true"
                         data-shared-element-id="tab-bar"
                       >
@@ -3458,7 +3458,7 @@
         </div>
       </div>
     </div>
-    <div data-application="true" class="d-none block-md">
+    <div data-application="true" class="hidden block-md">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e">
           <div>
@@ -8453,7 +8453,7 @@
     </div>
 
     <!-- Goverment ID remove modal -->
-    <div dir="ltr" class="d-none" id="goverment-id-modal">
+    <div dir="ltr" class="hidden" id="goverment-id-modal">
       <div class="modal__backdrop"></div>
       <section>
         <div class="modal__container" data-testid="modal-container">
