--- a/reviews.html
+++ b/reviews.html
@@ -71,7 +71,7 @@
                       </div>
                       <div class="_1as7kh5l" data-testid="after">
                         <div class="_4gelgl">
-                          <div class="_14f4nnk d-none d-md-inline-block">
+                          <div class="_14f4nnk hidden d-md-inline-block">
                             <div class="_h69t7tv">
                               <span class="_10rf6ea"
                                 >Last saved a few seconds ago</span
@@ -339,7 +339,7 @@
                   </section>
                   <!-- /1st page -->
                   <!-- 2nd page -->
-                  <section class="d-none">
+                  <section class="hidden">
                     <div class="_1pb0poc">
                       <div class="_1byskwn">
                         <div class="_15d5qr9n">
@@ -401,7 +401,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none block-md">
+                                  <div class="_h69t7tv hidden block-md">
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
@@ -480,7 +480,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none block-md">
+                                  <div class="_h69t7tv hidden block-md">
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
@@ -559,7 +559,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none block-md">
+                                  <div class="_h69t7tv hidden block-md">
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
@@ -638,7 +638,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none block-md">
+                                  <div class="_h69t7tv hidden block-md">
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
@@ -717,7 +717,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv d-none block-md">
+                                  <div class="_h69t7tv hidden block-md">
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
@@ -765,7 +765,7 @@
                   </section>
                   <!-- /2nd page -->
                   <!-- 3rd page -->
-                  <section class="d-none">
+                  <section class="hidden">
                     <div class="_1pb0poc">
                       <div class="_1byskwn">
                         <div class="_15d5qr9n">
@@ -1116,7 +1116,7 @@
                   </section>
                   <!-- /3rd page -->
                   <!-- 4th page -->
-                  <section class="d-none">
+                  <section class="hidden">
                     <div class="_1pb0poc">
                       <div class="_1byskwn">
                         <div class="_15d5qr9n">
@@ -1263,7 +1263,7 @@
                   </section>
                   <!-- /4th page -->
                   <!-- 5th page -->
-                  <section class="d-none">
+                  <section class="hidden">
                     <div class="_1pb0poc">
                       <div class="_1byskwn">
                         <div class="_15d5qr9n">
@@ -1352,7 +1352,7 @@
                           <div class="_dj903s">
                             <div class="_zmebr8n">
                               <div class="_1g0w9mx">
-                                <div class="_13ea8wp d-none">
+                                <div class="_13ea8wp hidden">
                                   <button type="button" class="_15rpys7s">
                                     <span>Back</span>
                                   </button>
